wescamp.py: Update from add-on server

--- a/Era_of_Four_Moons/EFM_eras.cfg
+++ b/Era_of_Four_Moons/EFM_eras.cfg
@@ -16,7 +16,7 @@
     id=era_EFM_a1_Extended
     name= _ "Era of Four Moons Extended"
     require_era=yes
-    description="The extended version of Era of Four Moons has eight factions instead. The extra factions are not complete o extensively tested tested."
+    description="The extended version of Era of Four Moons has eight factions instead. The extra factions are not complete or extensively tested"
 
     {RANDOM_SIDE}
     {EFM_SIDE EFM Highlanders}
