--- a/Era_of_Four_Moons/factions/Dalefolk-CFM.cfg
+++ b/Era_of_Four_Moons/factions/Dalefolk-CFM.cfg
@@ -13,4 +13,5 @@
     [ai]
 recruitment_pattern=scout,archer,fighter,healer,mixed fighter,archer,fighter,fighter,archer
     [/ai]
+    {FLAG_VARIANT wood-elvish}
 [/multiplayer_side]
