--- a/Era_of_Four_Moons/macros/abilities(extended).cfg
+++ b/Era_of_Four_Moons/macros/abilities(extended).cfg
@@ -216,11 +216,11 @@
 
 #define WEAPON_SPECIAL_STUN_EFM
                 [chance_to_hit]
-                    id=stun
+                    id=efm_stun
                     name= _ "Stun"
-                    description= _ "This attack puts enormous pressure on the enemy, disrupting his ZOC if a hit is landed. Not active on defense."
+                    description= _ "This attack puts enormous pressure on the enemy, disrupting his ZOC if a hit is landed. Not active on defense. Does not work on units that do not have a ZoC."
                     name_inactive= _ "Stun"
-                    description_inactive= _ "This attack puts enormous pressure on the enemy, disrupting his ZOC if a hit is landed. Not active on defense."
+                    description_inactive= _ "This attack puts enormous pressure on the enemy, disrupting his ZOC if a hit is landed. Not active on defense. Not active on defense. Does not work on units that do not have a ZoC."
                     apply_to=opponent
                     active_on=offense
                     value=60
@@ -233,11 +233,13 @@
     name=attacker_hits
     first_time_only=no
     [filter_attack]
-        special=stun
+        special=efm_stun
     [/filter_attack]
         [filter_second]
             [not]
-                level=0
+                [filter_wml]
+                    zoc=no
+                [/filter_wml]
             [/not]
         [/filter_second]
 
@@ -267,11 +269,6 @@
                     [effect]
                         apply_to=image_mod
                         replace="CS(50,50,0)"
-                    [/effect]
-
-                    [effect]
-                        apply_to=ellipse
-                        ellipse="misc/ellipse-nozoc"
                     [/effect]
 
                     [effect]
@@ -317,11 +314,6 @@
                 [effect]
                     apply_to=image_mod
                     replace="NOP()"
-                [/effect]
-
-                [effect]
-                    apply_to=ellipse
-                    ellipse="misc/ellipse"
                 [/effect]
 
                 [effect]
