--- a/Era_of_Four_Moons/macros/abilities.cfg
+++ b/Era_of_Four_Moons/macros/abilities.cfg
@@ -74,6 +74,44 @@
     [/resistance]
 #enddef
 
+#define WEAPON_SPECIAL_WATER_ONLY
+    [attacks]
+        id=EFM_wateronly
+      name= _ "water only"
+        description= _ "Water Only: Some attacks by naval units are useless against enemies on land, as the projectile or the vessel itself would become grounded."
+        value=0
+      [filter_opponent]
+         [filter_location]
+            [not]
+            terrain=Wo*,Ww*,Ss*,Sm,
+            [/not]
+         [/filter_location]
+      [/filter_opponent]
+    [/attacks]
+   [chance_to_hit]
+        id=chance to hit
+        value=0
+      [filter_opponent]
+         [filter_location]
+            [not]
+            terrain=Wo*,Ww*,Ss*,Sm,
+            [/not]
+         [/filter_location]
+      [/filter_opponent]
+    [/chance_to_hit]
+   [damage]
+        id=damage
+        value=0
+      [filter_opponent]
+         [filter_location]
+            [not]
+            terrain=Wo*,Ww*,Ss*,Sm,
+            [/not]
+         [/filter_location]
+      [/filter_opponent]
+    [/damage]
+#enddef
+
 #define WEAPON_SPECIAL_DAUNTLESS
     [damage]
         id=special_efm_dauntless
@@ -100,13 +138,19 @@
 
 #define WEAPON_SPECIAL_TRAMPLE
 [attacks]
-	id=weapon_special_trample
+	id=efm_weapon_special_trample
 	name= _ "Trample"
-        description= _ "On offense units with trample will gain two extra strikes and if they kill they will move into the hex of the unit they killed."
+        description= _ "On offense units with trample will gain two extra strikes."
         apply_to=self
         active_on=offense
         add=2
-    [/attacks]
+[/attacks]
+[dummy]
+	id=efm_weapon_special_overrun
+	name= _ "Overrun"
+        description= _ "On offense units with trample who kills his opponent will move into the hex his opponent was in."
+        active_on=offense
+[/dummy]
 [/specials]
 [/attack]
 
@@ -114,7 +158,7 @@
      name=attacker hits
      first_time_only=no
      [filter_attack]
-          special=weapon_special_trample
+          special=efm_weapon_special_overrun
      [/filter_attack]
      [if]
         [not]
@@ -200,132 +244,6 @@
 	description= _ "This attack has 1 strike per 10% defense it's target has it also has a 70% chance to hit. The sapper dies when it uses this attack."
 	description_inactive= _ "This attack has 1 strike per 10% defense it's target has it also has a 70% chance to hit. The sapper dies when it uses this attack."
     [/chance_to_hit]
-#enddef
-
-#define ABILITY_HEAL_3
-    [heals]
-        value=3
-        id=healing
-        affect_allies=yes
-        name= _ "heal+3"
-        description=  _ "This unit will heal allies by 3 hp at the start of it's turn. Will slow poison."
-        affect_self=no
-        poison=slowed
-        [affect_adjacent]
-            adjacent=n,ne,se,s,sw,nw
-        [/affect_adjacent]
-    [/heals]
-#enddef
-
-#define ABILITY_FORESTHOME
-    [regenerate]
-        [filter_self]
-            [filter_location]
-                terrain=Gs^Fp,Gg^Fet,Gs^Ft,Aa^Fpa
-            [/filter_location]
-        [/filter_self]
-        value=3
-        id=healing
-        name= _ "foresthome"
-        description= _ "Foresthome:
-This unit will regenerate 3 hp when in forest."
-        name_inactive= _ "foresthome"
-        description_inactive= _ "Foresthome:
-This unit will regenerate 3 hp when in forest."
-        affect_self=yes
-    [/regenerate]
-#enddef
-
-#define ABILITY_WATERHOME
-    [regenerate]
-        [filter_self]
-            [filter_location]
-                terrain=Wo,Ww
-            [/filter_location]
-        [/filter_self]
-        value=3
-        id=healing
-        name= _ "waterhome"
-        description= _ "Waterhome:
-This unit will regenerate 3 hp when in deep or shallow water."
-        name_inactive= _ "waterhome"
-        description_inactive= _ "Waterhome:
-This unit will regenerate 3 hp when in deep or shallow water."
-        affect_self=yes
-    [/regenerate]
-#enddef
-
-#define ABILITY_DESERTHOME
-    [regenerate]
-        [filter_self]
-            [filter_location]
-                terrain=Dd,Ds
-            [/filter_location]
-        [/filter_self]
-        value=3
-        id=healing
-        name= _ "deserthome"
-        description= _ "Deserthome:
-This unit will regenerate 3 hp when in desert or sand."
-        name_inactive= _ "deserthome"
-        description_inactive= _ "Deserthome:
-This unit will regenerate 3 hp when in desert or sand."
-        affect_self=yes
-    [/regenerate]
-#enddef
-
-#define ABILITY_MTNHOME
-    [regenerate]
-        [filter_self]
-            [filter_location]
-                terrain=Mm
-            [/filter_location]
-        [/filter_self]
-        value=3
-        id=healing
-        name= _ "mountainhome"
-        description= _ "Mountainhome:
-This unit will regenerate 3 hp when on mountains."
-        name_inactive= _ "mountainhome"
-        description_inactive= _ "Mountainhome:
-This unit will regenerate 3 hp when in mountains."
-        affect_self=yes
-    [/regenerate]
-#enddef
-
-#define ABILITY_INSPIRE
-    [leadership]
-        id=leadership
-        value=10
-        cumulative=no
-        name= _ "inspire"
-        description= _ "Inspire:
-This unit can inspire friendly units that are next to it, making them fight better.
-
-Adjacent friendly level 1 units will do 10% more damage in battle. Does not work on Celestial messengers."
-        affect_self=no
-        [affect_adjacent]
-            adjacent=n,ne,se,s,sw,nw
-            [filter]
-                level=1
-                [not]
-                    type=EOM_Messenger
-                [/not]
-            [/filter]
-        [/affect_adjacent]
-    [/leadership]
-    [leadership]
-        id=leadership
-        value=25
-        cumulative=no
-        affect_self=no
-        [affect_adjacent]
-            adjacent=n,ne,se,s,sw,nw
-            [filter]
-                level=0
-            [/filter]
-        [/affect_adjacent]
-    [/leadership]
 #enddef
 
 #define MACRO_OBJECT_DECREASE_DEFENSE UNIT TERRAIN AMOUNT
