--- a/Era_of_Four_Moons/macros/macro_curse.cfg
+++ b/Era_of_Four_Moons/macros/macro_curse.cfg
@@ -37,9 +37,8 @@
     [/set_variable]
     [set_variable]
         name=limit_for_addition
-        add=-{AMOUNT}
+        add={AMOUNT}
     [/set_variable]
-
     [if]
         [variable]
             name=cursed_unit.defense.{TERRAIN}
@@ -58,10 +57,24 @@
             [/set_variable]
         [/then]
         [else]
-            [set_variable]
-                name=cursed_unit.defense.{TERRAIN}
-                add={AMOUNT}
-            [/set_variable]
+            [if]  #This is to handle negative defenses.
+                [variable]
+                    name=cursed_unit.defense.{TERRAIN}
+                    greater_than=0
+                [/variable]
+                [then]
+                   [set_variable]
+                       name=cursed_unit.defense.{TERRAIN}
+                       add={AMOUNT}
+                   [/set_variable]
+                [/then]
+                [else]
+                   [set_variable]
+                       name=cursed_unit.defense.{TERRAIN}
+                       add=-{AMOUNT}
+                   [/set_variable]
+                [/else]
+            [/if]
         [/else]
     [/if]
     [unstore_unit]
