--- a/Era_of_Four_Moons/units/Dalefolk/a2_Delver.cfg
+++ b/Era_of_Four_Moons/units/Dalefolk/a2_Delver.cfg
@@ -25,6 +25,9 @@
         hills=40
         caves=30
     [/defense]
+    [movement_costs]
+        cave=1
+    [/movement_costs]
 
     [attack]
         name=pick
