--- a/Era_of_Four_Moons/units/Freemen/e2_Dervish.cfg
+++ b/Era_of_Four_Moons/units/Freemen/e2_Dervish.cfg
@@ -9,7 +9,7 @@
     hitpoints=42
     movement_type=EFM_desertelusive
     movement=6
-    experience=90
+    experience=110
     level=2
     alignment=lawful
     advances_to=EFM_Immortal
@@ -20,6 +20,13 @@
     die_sound={SOUND_LIST:HUMAN_DIE}
     undead_variation=human
 
+    [movement_costs]
+        forest=1
+        hills=1
+        mountains=2
+        frozen=2
+    [/movement_costs]
+
     [abilities]
          {ABILITY_SKIRMISHER}
     [/abilities]
@@ -29,7 +36,7 @@
         description= _"scimitar"
         type=blade
         range=melee
-        damage=7
+        damage=8
         number=3
         icon=attacks/sword-orcish.png
     [/attack]
@@ -38,8 +45,8 @@
         description=_"chakram"
         type=blade
         range=ranged
-        damage=7
-        number=2
+        damage=5
+        number=3
         icon=attacks/chakram.png
     [/attack]
 
