--- a/Era_of_Four_Moons/units/Freemen/g3_Screecher.cfg
+++ b/Era_of_Four_Moons/units/Freemen/g3_Screecher.cfg
@@ -12,7 +12,8 @@
     experience=120
     level=3
     alignment=lawful
-    advances_to=EFM_Screecher
+    advances_to=null
+    {AMLA_DEFAULT}
     cost=45
     usage=archer
     description= _ "The most terrible of chanters can use not just the volume and power of their voice as a weapon but the resonance as well. A voice held at the perfect pitch with enough volume can shatter the crystalline structures of stone and make structures collapse."
