--- a/Era_of_Four_Moons/units/Imperialists/g3_Grand_Trireme.cfg
+++ b/Era_of_Four_Moons/units/Imperialists/g3_Grand_Trireme.cfg
@@ -46,6 +46,7 @@
         icon=attacks/ram.png
         [specials]
             {WEAPON_SPECIAL_CHARGE}
+            {WEAPON_SPECIAL_WATER_ONLY}
         [/specials]
     [/attack]
     [attack]
