--- a/Era_of_Four_Moons/units/Pygmies/a0_Knat.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/a0_Knat.cfg
@@ -11,7 +11,7 @@
     movement=6
     experience=28
     level=0
-    alignment=chaotic
+    alignment=liminal
     advances_to=EFM_Fly
     cost=8
     usage=archer
