--- a/Era_of_Four_Moons/units/Pygmies/a1_Fly.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/a1_Fly.cfg
@@ -11,7 +11,7 @@
     movement=6
     experience=44
     level=1
-    alignment=chaotic
+    alignment=liminal
     advances_to=EFM_Stinger,EFM_Mudfoot
     cost=15
     usage=archer
@@ -38,7 +38,7 @@
         description= _"blow darts"
         type=pierce
         damage=3
-        number=6
+        number=7
         range=ranged
         icon=attacks/thorns.png
     [/attack]
