--- a/Era_of_Four_Moons/units/Pygmies/a2_Stinger.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/a2_Stinger.cfg
@@ -11,7 +11,7 @@
     movement=6
     experience=90
     level=2
-    alignment=chaotic
+    alignment=liminal
     advances_to=null
     {AMLA_DEFAULT}
     cost=27
@@ -32,14 +32,14 @@
         type=impact
         range=melee
         damage=5
-        number=3
+        number=4
     [/attack]
     [attack]
         name=blow darts
         description= _"blow darts"
         type=pierce
-        damage=4
-        number=6
+        damage=5
+        number=7
         range=ranged
         icon=attacks/thorns.png
         [specials]
