--- a/Era_of_Four_Moons/units/Pygmies/c3_SaberCat.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/c3_SaberCat.cfg
@@ -6,12 +6,12 @@
     race=EFMpygmy
     image="Pygmies/saber_cat.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    hitpoints=55
+    hitpoints=56
     movement_type=EFM_pygmyfoot
     movement=6
     experience=100
     level=3
-    alignment=chaotic
+    alignment=liminal
     advances_to=null
     {AMLA_DEFAULT}
     cost=40
@@ -32,7 +32,7 @@
         icon=attacks/saber-human.png
         type=blade
         range=melee
-        damage=8
+        damage=9
         number=5
     [/attack]
 
