--- a/Era_of_Four_Moons/units/Pygmies/e1_Crocodile.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/e1_Crocodile.cfg
@@ -11,9 +11,9 @@
     movement=6
     experience=42
     level=1
-    alignment=chaotic
+    alignment=liminal
     advances_to=EFM_GrandCrocodile
-    cost=18
+    cost=17
     usage=fighter
     description= _ "Large portions of the jungle that the pygmies live in could be better described as a swamp. Living in these swamps is a fearsome predator that lurks in the swampy waters and ambushes the unweary. However even these fearsome beasts are not beyond the ability of pygmies tamers."
     {DEFENSE_ANIM "Pygmies/green_crocodile.png" "Pygmies/green_crocodile.png" crocodile-hit.wav }
