--- a/Era_of_Four_Moons/factions/Darklanders-EFM.cfg
+++ b/Era_of_Four_Moons/factions/Darklanders-EFM.cfg
@@ -14,4 +14,5 @@ recruit=EFM_Tribesman,EFM_Hurler,EFM_Beastman,EFM_JaguarRider,EFM_Viper,EFM_Mali
     [ai]
 recruitment_pattern=fighter,fighter,archer,scout,archer,scout,fighter
     [/ai]
+    {FLAG_VARIANT ragged}
 [/multiplayer_side]
