--- a/Era_of_Four_Moons/factions/Highlanders-EFM.cfg
+++ b/Era_of_Four_Moons/factions/Highlanders-EFM.cfg
@@ -14,4 +14,5 @@ recruit=EFM_Brave,EFM_Hunter,EFM_Runner,EFM_LionWarrior,EFM_WitchDoctor,EFM_Elep
     [ai]
 recruitment_pattern=fighter,fighter,archer,healer,archer,scout,fighter
     [/ai]
+    {FLAG_VARIANT undead}
 [/multiplayer_side]
