--- a/Era_of_Four_Moons/factions/Imperialists-EFM.cfg
+++ b/Era_of_Four_Moons/factions/Imperialists-EFM.cfg
@@ -13,4 +13,5 @@ recruit=EFM_Legionnaire,EFM_Slinger,EFM_Hardback,EFM_Pelite,EFM_Standard,EFM_Sap
     [ai]
 recruitment_pattern=fighter,fighter,archer,scout,archer,scout,mixed fighter
     [/ai]
+    {FLAG_VARIANT knalgan}
 [/multiplayer_side]
