--- a/Era_of_Four_Moons/factions/Pygmies-EFM.cfg
+++ b/Era_of_Four_Moons/factions/Pygmies-EFM.cfg
@@ -13,4 +13,5 @@
     [ai]
 recruitment_pattern=scout,archer,fighter,archer,archer,archer,fighter
     [/ai]
+    {FLAG_VARIANT undead}
 [/multiplayer_side]
