--- a/Era_of_Four_Moons/factions/SeaStates-CFM.cfg
+++ b/Era_of_Four_Moons/factions/SeaStates-CFM.cfg
@@ -13,4 +13,5 @@ recruit=EFM_Regimenteer,EFM_Loyalist,EFM_CompositeBowman,EFM_Rider,EFM_HorseArch
     [ai]
 recruitment_pattern=scout,archer,fighter,fighter,archer,fighter
     [/ai]
+    {FLAG_VARIANT long}
 [/multiplayer_side]
