--- a/Era_of_Four_Moons/factions/Whites-EFM.cfg
+++ b/Era_of_Four_Moons/factions/Whites-EFM.cfg
@@ -13,4 +13,5 @@
     [ai]
 recruitment_pattern=fighter,fighter,archer,scout,archer,fighter
     [/ai]
+    {FLAG_VARIANT loyalist}
 [/multiplayer_side]
