--- a/Era_of_Four_Moons/units/Freemen/a3_Caliph.cfg
+++ b/Era_of_Four_Moons/units/Freemen/a3_Caliph.cfg
@@ -56,17 +56,17 @@
         start_time=-500
         [frame]
             duration=200
-            image="Freemen/amir.png"
+            image="Freemen/caliph.png"
         [/frame]
         [frame]
             duration=200
-            image="Freemen/amir.png"
+            image="Freemen/caliph.png"
         [/frame]
         [if]
             hits=no
             [frame]
                 duration=100
-                image="Freemen/amir.png"
+                image="Freemen/caliph.png"
                 sound=miss-2.ogg
             [/frame]
         [/if]
@@ -74,13 +74,13 @@
             hits=yes
             [frame]
                 duration=100
-                image="Freemen/amir.png"
+                image="Freemen/caliph.png"
                 sound=dagger-swish.ogg
             [/frame]
         [/else]
         [frame]
             duration=200
-            image="Freemen/amir.png"
+            image="Freemen/caliph.png"
         [/frame]
     [/attack_anim]
     [attack_anim]
@@ -90,17 +90,17 @@
         start_time=-500
         [frame]
             duration=200
-            image="Freemen/amir.png"
+            image="Freemen/caliph.png"
         [/frame]
         [frame]
             duration=200
-            image="Freemen/amir.png"
+            image="Freemen/caliph.png"
         [/frame]
         [if]
             hits=no
             [frame]
                 duration=100
-                image="Freemen/amir.png"
+                image="Freemen/caliph.png"
                 sound=miss-2.ogg
             [/frame]
         [/if]
@@ -108,13 +108,13 @@
             hits=yes
             [frame]
                 duration=100
-                image="Freemen/amir.png"
+                image="Freemen/caliph.png"
                 sound=sword-1.ogg
             [/frame]
         [/else]
         [frame]
             duration=200
-            image="Freemen/amir.png"
+            image="Freemen/caliph.png"
         [/frame]
     [/attack_anim]
 [/unit_type]
