--- a/Era_of_Four_Moons/units/Freemen/b1_Sandwalker.cfg
+++ b/Era_of_Four_Moons/units/Freemen/b1_Sandwalker.cfg
@@ -2,7 +2,7 @@
 
 [unit_type]
     id=EFM_SandWalker
-    name= _ "Sand walker"
+    name= _ "Sand Walker"
     race=EFMfreeman
     image="Freemen/sand_walker.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
