--- a/Era_of_Four_Moons/units/Freemen/e3_Immortal.cfg
+++ b/Era_of_Four_Moons/units/Freemen/e3_Immortal.cfg
@@ -6,10 +6,10 @@
     race=EFMfreeman
     image="Freemen/immortal.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    hitpoints=58
+    hitpoints=62
     movement_type=EFM_desertelusive
     movement=6
-    experience=90
+    experience=100
     level=3
     alignment=lawful
     advances_to=null
@@ -21,6 +21,13 @@
     die_sound={SOUND_LIST:HUMAN_DIE}
     undead_variation=human
 
+    [movement_costs]
+        forest=1
+        hills=1
+        mountains=2
+        frozen=2
+    [/movement_costs]
+
     [abilities]
          {ABILITY_SKIRMISHER}
     [/abilities]
@@ -30,7 +37,7 @@
         description= _"scimitar"
         type=blade
         range=melee
-        damage=11
+        damage=12
         number=3
         icon=attacks/sword-orcish.png
     [/attack]
@@ -39,7 +46,7 @@
         description=_"chakram"
         type=blade
         range=ranged
-        damage=7
+        damage=8
         number=3
         icon=attacks/chakram.png
     [/attack]
