--- a/Era_of_Four_Moons/units/Highlanders/d1_Runner.cfg
+++ b/Era_of_Four_Moons/units/Highlanders/d1_Runner.cfg
@@ -15,7 +15,7 @@
     advances_to=EFM_Strider
     cost=14
     usage=scout
-    description= _ "The runners of the highlands are renown for their ability to run down horses. Untrained horses when they sense danger will run as fast as they can to get away. Although the runner cannot match that speed he will give chase knowing that he can run for longer. Though the chase may last for quite awhile the runner will surely win in the end."
+    description= _ "The runners of the highlands are renown for their ability to run down horses. Untrained horses when they sense danger will run as fast as they can to get away. Although the runner cannot match that speed he will give chase knowing that he can run for longer. Though the chase may last for a long time the runner will surely win in the end."
     {DEFENSE_ANIM "Highlander/runner.png" "Highlander/runner.png" {SOUND_LIST:HUMAN_HIT} }
     die_sound={SOUND_LIST:HUMAN_DIE}
     undead_variation=human
