--- a/Era_of_Four_Moons/units/Imperialists/g2_Trireme.cfg
+++ b/Era_of_Four_Moons/units/Imperialists/g2_Trireme.cfg
@@ -45,6 +45,7 @@
         icon=attacks/ram.png
         [specials]
             {WEAPON_SPECIAL_CHARGE}
+            {WEAPON_SPECIAL_WATER_ONLY}
         [/specials]
     [/attack]
 
