--- a/Era_of_Four_Moons/units/Pygmies/a2_Mudfoot.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/a2_Mudfoot.cfg
@@ -11,7 +11,7 @@
     movement=6
     experience=100
     level=2
-    alignment=chaotic
+    alignment=liminal
     advances_to=null
     {AMLA_DEFAULT}
     cost=29
@@ -36,7 +36,7 @@
         icon=attacks/sword-elven.png
         type=blade
         range=melee
-        damage=5
+        damage=6
         number=3
         [specials]
             {WEAPON_SPECIAL_BACKSTAB}
@@ -46,8 +46,8 @@
         name=blow darts
         description= _"blow darts"
         type=pierce
-        damage=3
-        number=6
+        damage=4
+        number=5
         range=ranged
         icon=attacks/thorns.png
     [/attack]
