--- a/Era_of_Four_Moons/units/Pygmies/b1_Piper.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/b1_Piper.cfg
@@ -6,12 +6,12 @@
     race=EFMpygmy
     image="Pygmies/piper.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    hitpoints=27
+    hitpoints=28
     movement_type=EFM_pygmyfoot
     movement=5
     experience=60
     level=1
-    alignment=chaotic
+    alignment=liminal
     advances_to=EFM_Charmer
     cost=17
     usage=archer
@@ -30,7 +30,7 @@
         icon=attacks/sword-elven.png
         type=blade
         range=melee
-        damage=3
+        damage=5
         number=2
     [/attack]
     [attack]
