--- a/Era_of_Four_Moons/units/Pygmies/b2_Charmer.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/b2_Charmer.cfg
@@ -11,7 +11,7 @@
     movement=5
     experience=120
     level=2
-    alignment=chaotic
+    alignment=liminal
     advances_to=null
     {AMLA_DEFAULT}
     cost=32
@@ -31,7 +31,7 @@
         icon=attacks/sword-elven.png
         type=blade
         range=melee
-        damage=3
+        damage=5
         number=3
     [/attack]
     [attack]
