--- a/Era_of_Four_Moons/units/Pygmies/c1_Puma.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/c1_Puma.cfg
@@ -11,9 +11,9 @@
     movement=6
     experience=42
     level=1
-    alignment=chaotic
+    alignment=liminal
     advances_to=EFM_Lynx
-    cost=17
+    cost=16
     usage=fighter
     description= _ "The Pygmies export spider silk and a number of other things to the sea states in exchange for tools and steel knives. A long knife may as well be a sword in the hands of a pygmy but others have learned not to underestimate the agility with which the little men can wield their weapons. In particular their ability to dart around a mans guard is noted."
     {DEFENSE_ANIM "Pygmies/puma.png" "Pygmies/puma.png" {SOUND_LIST:HUMAN_HIT} }
