--- a/Era_of_Four_Moons/units/Pygmies/c2_Lynx.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/c2_Lynx.cfg
@@ -9,11 +9,11 @@
     hitpoints=41
     movement_type=EFM_pygmyfoot
     movement=6
-    experience=70
+    experience=100
     level=2
-    alignment=chaotic
+    alignment=liminal
     advances_to=EFM_SaberCat
-    cost=30
+    cost=28
     usage=fighter
     description= _ "The knife wielders who come back alive with a decent collection of scalps are afforded great honor in pygmy society. They are admitted into a special caste with associated privileges and will not have any problems finding themselves a willing mate."
     {DEFENSE_ANIM "Pygmies/lynx.png" "Pygmies/lynx.png" {SOUND_LIST:HUMAN_HIT} }
@@ -31,7 +31,7 @@
         icon=attacks/sword-elven.png
         type=blade
         range=melee
-        damage=5
+        damage=6
         number=5
     [/attack]
 
