--- a/Era_of_Four_Moons/units/Pygmies/d1_SpiderRider.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/d1_SpiderRider.cfg
@@ -9,9 +9,9 @@
     movement=8
     experience=50
     level=1
-    alignment=chaotic
+    alignment=liminal
     advances_to=EFM_WebSpitter,EFM_GreatSpider
-    cost=22
+    cost=21
     usage=scout
     description= _ "The most infamous thing about the pygmies military is their use of giant spiders as mounts. Other nations regard this with a mixture of disgust and horror for the giant spiders make very effective combat mounts."
     die_sound=hiss-big.wav
