--- a/Era_of_Four_Moons/units/Pygmies/e2_GrandCrocodile.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/e2_GrandCrocodile.cfg
@@ -11,7 +11,7 @@
     movement=6
     experience=90
     level=2
-    alignment=chaotic
+    alignment=liminal
     advances_to=null
     {AMLA_DEFAULT}
     cost=29
