--- a/Era_of_Four_Moons/units/Pygmies/f1_SwampWitch.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/f1_SwampWitch.cfg
@@ -10,11 +10,11 @@
     hitpoints=29
     movement_type=EFM_pygmyfoot
     movement=5
-    experience=42
+    experience=45
     level=1
-    alignment=chaotic
+    alignment=liminal
     advances_to=EFM_Wyrd,EFM_ToadBreath
-    cost=16
+    cost=15
     usage=archer
     description= _ "Although most pygmies do not practice cannibalism like the rumors say there are a few who do. Do not let your children play near the jungle else they may fall victim to the devil witches who eat man and wield death and decay as weapons."
     {DEFENSE_ANIM "Pygmies/swamp_witch-defend.png" "Pygmies/swamp_witch-defend.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
