--- a/Era_of_Four_Moons/units/Pygmies/f2_ToadBreath.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/f2_ToadBreath.cfg
@@ -12,7 +12,7 @@
     movement=5
     experience=100
     level=2
-    alignment=chaotic
+    alignment=liminal
     advances_to=EFM_LizardEye
     cost=33
     usage=archer
