--- a/Era_of_Four_Moons/units/Pygmies/f3_LizardEye.cfg
+++ b/Era_of_Four_Moons/units/Pygmies/f3_LizardEye.cfg
@@ -12,7 +12,7 @@
     movement=5
     experience=100
     level=3
-    alignment=chaotic
+    alignment=liminal
     advances_to=null
     {AMLA_DEFAULT}
     cost=50
