wescamp.py: Update from add-on server

--- a/Era_of_Four_Moons/EFM_eras.cfg
+++ b/Era_of_Four_Moons/EFM_eras.cfg
@@ -4,7 +4,8 @@
     id=era_EFM_a1
     name= _ "Era of Four Moons"
     require_era=yes
-    description="The Era of Four Moons is designed to be a balanced alternative to default for players who've gotten tired of the six default factions. Has four factions. Based on a setting designed by L. Shellby. Looking for skilled playtesters. Post replays of standard multiplayer matches on the forum."
+    description="The Era of Four Moons is designed to be a balanced alternative to default for players who've gotten tired of the six default factions. Has four factions. Based on a setting designed by L. Shellby. 
+Looking for skilled playtesters. Post replays of standard multiplayer matches on the forum."
 
     {RANDOM_SIDE}
     {EFM_SIDE EFM Highlanders}
