--- a/Era_of_Four_Moons/macros/abilities.cfg
+++ b/Era_of_Four_Moons/macros/abilities.cfg
@@ -222,7 +222,7 @@
 #enddef
 
 #define WEAPON_SPECIAL_SAPPER VALUE
-[attacks]
+ [attacks] #Sapper has one copy of this special per possible defense value.
         id=weapon_special_sapper
         apply_to=self
         active_on=offense
@@ -236,13 +236,13 @@
 #enddef
 
 #define WEAPON_SPECIAL_SAPPER_FACEPLATE
-    [chance_to_hit]
+    [chance_to_hit]  #This ability represents the one that shows up on the unit and handles the always has 70% chance to hit.
         id=weapon_special_sapper_faceplate
 	name= _ "Sapper"
 	name_inactive= _ "Sapper"
         value=70
-	description= _ "This attack has 1 strike per 10% defense it's target has it also has a 70% chance to hit. The sapper dies when it uses this attack."
-	description_inactive= _ "This attack has 1 strike per 10% defense it's target has it also has a 70% chance to hit. The sapper dies when it uses this attack."
+	description= _ "This attack has 1 strike per 10% defense it's target has it also has a 70% chance to hit. The sapper dies when it uses this attack. Sapper damage cannot be boosted by leadership."
+	description_inactive= _ "This attack has 1 strike per 10% defense it's target has it also has a 70% chance to hit. The sapper dies when it uses this attack. Sapper damage cannot be boosted by leadership."
     [/chance_to_hit]
 #enddef
 
