--- a/Era_of_Four_Moons/units/Freemen/f2_GreatRoc.cfg
+++ b/Era_of_Four_Moons/units/Freemen/f2_GreatRoc.cfg
@@ -2,8 +2,8 @@
     id=EFM_GreatRoc
     name= _ "Great Roc"
     race=monster
-    image="Freemen/rocmaster.png"
-    #halo="Freemen/rocmaster.png"
+    image="Freemen/rocmaster1.png"
+    #halo="Freemen/rocmaster1.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=65
     movement_type=fly
@@ -39,30 +39,6 @@
         [frame]
             begin=450
             end=600
-            #image="halo/blank.png"
-            image="Freemen/rocmaster4.png"
-        [/frame]
-        [frame]
-            begin=600
-            end=750
-            #image="halo/blank.png"
-            image="Freemen/rocmaster5.png"
-        [/frame]
-        [frame]
-            begin=750
-            end=900
-            #image="halo/blank.png"
-            image="Freemen/rocmaster4.png"
-        [/frame]
-        [frame]
-            begin=900
-            end=1050
-            #image="halo/blank.png"
-            image="Freemen/rocmaster3.png"
-        [/frame]
-        [frame]
-            begin=1050
-            end=1200
             #image="halo/blank.png"
             image="Freemen/rocmaster2.png"
         [/frame]
