--- a/Era_of_Four_Moons/units/Imperialists/e1_Sapper.cfg
+++ b/Era_of_Four_Moons/units/Imperialists/e1_Sapper.cfg
@@ -7,7 +7,7 @@
     ignore_race_traits=yes
     image="Imperialists/sapper.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
-    hitpoints=14
+    hitpoints=12
     movement_type=smallfoot
     movement=5
     experience=100
@@ -15,7 +15,7 @@
     alignment=neutral
     advances_to=null
     {AMLA_DEFAULT}
-    cost=8
+    cost=9
     usage=fighter
     description= _ "The sappers are all slaves who have been given the opportunity to die honorably. The legions rarely run short on volunteers as many of the conquered people were proud folk who would rather die in battle than be a servant for the rest of their lives. It is not unknown for free citizens to take the role too if they feel sufficiently disgraced. Note: Their attack reduces their targets current hitpoints by the % of their current defense.(Capped at 20 damage) (Example: a thirty hitpoint unit standing on 50% defense terrain attacked by a sapper would take 15 damage)."
 
@@ -187,6 +187,12 @@
             name=suicide
         [/filter_attack]
         start_time=0
+
+        [frame]
+            duration=200
+            image=projectiles/fireball-impact-16.png
+        [/frame]
+
         [missile_frame]
             duration=20
             image=projectiles/fire-breath-1.png
@@ -237,11 +243,6 @@
             image=projectiles/fire-breath-10.png
             offset=1.0
         [/missile_frame]
-        [frame]
-            duration=200
-            image="projectiles/fireball-impact-16"
-        [/frame]
-
     [/attack_anim]
 
 [/unit_type]
