--- a/Era_of_Four_Moons/units/Freemen/c3_Zamburak.cfg
+++ b/Era_of_Four_Moons/units/Freemen/c3_Zamburak.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-Era_of_Four_Moons
 
 [unit_type]
-    id=EFM_Zunbooruch
-    name= _ "Zunbooruch"
+    id=EFM_Zamburak
+    name= _ "Zamburak"
     race=EFMfreeman
-    image="Freemen/zunbooruch.png"
+    image="Freemen/zamburak.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=76
     movement_type=EFM_desertmounted
@@ -16,8 +16,8 @@
     {AMLA_DEFAULT}
     cost=40
     usage=scout
-    description= _ "Zunbooruch was a mehariste officer who famously sniped the enemies sultan from his camel mount at a range of a hundred yards with a crossbow after calling the shot. Since then whenever a successful mehariste has saved up enough for a crossbow (very expensive purchase in the freelands) people will call them after said officer."
-    {DEFENSE_ANIM "Freemen/zunbooruch.png" "Freemen/zunbooruch.png" {SOUND_LIST:TROLL_HIT} }
+    description= _ "Zamburak was a mehariste officer who famously sniped the enemies sultan from his camel mount at a range of a hundred yards with a crossbow after calling the shot. Since then whenever a successful mehariste has saved up enough for a crossbow (very expensive purchase in the freelands) people will call them after said officer."
+    {DEFENSE_ANIM "Freemen/zamburak.png" "Freemen/zamburak.png" {SOUND_LIST:TROLL_HIT} }
     die_sound={SOUND_LIST:TROLL_DIE}
     undead_variation=human
 
@@ -48,17 +48,17 @@
         start_time=-500
         [frame]
             duration=200
-            image="Freemen/zunbooruch.png"
+            image="Freemen/zamburak.png"
         [/frame]
         [frame]
             duration=200
-            image="Freemen/zunbooruch.png"
+            image="Freemen/zamburak.png"
         [/frame]
         [if]
             hits=no
             [frame]
                 duration=100
-                image="Freemen/zunbooruch.png"
+                image="Freemen/zamburak.png"
                 sound=miss-2.ogg
             [/frame]
         [/if]
@@ -66,13 +66,13 @@
             hits=yes
             [frame]
                 duration=100
-                image="Freemen/zunbooruch.png"
+                image="Freemen/zamburak.png"
                 sound={SOUND_LIST:SWORD_SWISH}
             [/frame]
         [/else]
         [frame]
             duration=200
-            image="Freemen/zunbooruch.png"
+            image="Freemen/zamburak.png"
         [/frame]
     [/attack_anim]
 
@@ -91,7 +91,7 @@
             [frame]
                 begin=-350
                 end=50
-                image="Freemen/zunbooruch.png"
+                image="Freemen/zamburak.png"
                 sound=crossbow.ogg
             [/frame]
         [/if]
@@ -100,7 +100,7 @@
             [frame]
                 begin=-350
                 end=50
-                image="Freemen/zunbooruch.png"
+                image="Freemen/zamburak.png"
                 sound=crossbow-miss.ogg
             [/frame]
         [/else]
