wescamp.py: Update from add-on server

--- a/Era_of_Four_Moons/macros/abilities(extended).cfg
+++ b/Era_of_Four_Moons/macros/abilities(extended).cfg
@@ -36,6 +36,7 @@
         female_name= _ "female^wardrums"
         description=_ "All adjacent units deal 25% extra damage for melee attacks."
     [/dummy]
+    # wmlxgettext: [abilities]
     [/abilities]
     [event]
         name=turn refresh,attack,recruit,recall
@@ -90,6 +91,7 @@
     {CLEAR_VARIABLE add_wardrums_special}       
     [/event]
     [+abilities]
+    # wmlxgettext: [/abilities]
 #enddef
 
 #define WEAPON_SPECIAL_INVISIBLE_WARDRUMS_AFFECTED
@@ -113,6 +115,7 @@
         female_name= _ "female^saga"
         description=_ "Whenever an adjacent friendly unit makes a kill, all friendly adjacent unit gain experience points equal to twice the level of the killer."
     [/dummy]
+    # wmlxgettext: [abilities]
     [/abilities]
 
     [event] #event stores units adjacent to unit with saga to give them experience if a unit is killed by unit next to a unit with saga on the same side.
@@ -191,6 +194,7 @@
     {CLEAR_VARIABLE telling_the_tale}  
     [/event]
     [+abilities]
+    # wmlxgettext: [/abilities]
 #enddef
 
 #define ABILITY_LURKER
@@ -226,7 +230,9 @@
                     value=60
                     cumulative=yes
                 [/chance_to_hit]
+    # wmlxgettext: [specials]
            [/specials]
+    # wmlxgettext: [attack]
         [/attack]
 
 [event]
@@ -327,6 +333,8 @@
     [/event]
 
 [+attack]
+    # wmlxgettext: [/attack]
 [+specials]
+    # wmlxgettext: [/specials]
 
 #enddef
