--- a/Era_of_Four_Moons/macros/abilities.cfg
+++ b/Era_of_Four_Moons/macros/abilities.cfg
@@ -151,7 +151,9 @@
         description= _ "On offense units with trample who kills his opponent will move into the hex his opponent was in."
         active_on=offense
 [/dummy]
+    # wmlxgettext: [specials]
 [/specials]
+    # wmlxgettext: [attack]
 [/attack]
 
 [event]
@@ -217,7 +219,9 @@
      [/if]
 [/event]
 [+attack]
+    # wmlxgettext: [/attack]
 [+specials]
+    # wmlxgettext: [/specials]
 
 #enddef
 
@@ -349,6 +353,7 @@ Forest/Cave: Bear"
 
 	apply_to=self
     [/dummy]
+    # wmlxgettext: [abilities]
 [/abilities]
 
 [event]
@@ -774,6 +779,6 @@ Forest/Cave: Bear"
     {CLEAR_VARIABLE hex_moved_on}
     {CLEAR_VARIABLE unit_to_modify}
 [/event]
-
 [+abilities]
+    # wmlxgettext: [abilities]
 #enddef
