--- a/Era_of_Four_Moons/macros/hex.cfg
+++ b/Era_of_Four_Moons/macros/hex.cfg
@@ -14,7 +14,9 @@ Does not affect undeads, and the defense value can't go lower than 10%."
 Does not affect undeads, and the defense value can't go lower than 10%."
         apply_to=opponent
     [/dummy]
+    # wmlxgettext: [specials]
 [/specials]
+    # wmlxgettext: [attack]
 [/attack]
 
 # event that adds a "cursed" variable to units that don't have it already, and set it to "no" by default
@@ -315,7 +317,9 @@ Does not affect undeads, and the defense value can't go lower than 10%."
     [/remove_unit_overlay]
 [/event]
 [+attack]
+    # wmlxgettext: [/attack]
     [+specials]
+    # wmlxgettext: [/specials]
 #enddef
 
 
