--- a/Era_of_Four_Moons/macros/shifter.cfg
+++ b/Era_of_Four_Moons/macros/shifter.cfg
@@ -15,7 +15,9 @@ Forest/Cave: Bear"
 
 	apply_to=self
     [/dummy]
+    # wmlxgettext: [abilities]
 [/abilities]
+
 
 [event]
     name=side turn
@@ -478,4 +480,5 @@ Forest/Cave: Bear"
 [/event]
 
 [+abilities]
+    # wmlxgettext: [/abilities]
 #enddef
